--- a/MIDN_figures_and_tables.Rmd
+++ b/MIDN_figures_and_tables.Rmd
@@ -251,7 +251,7 @@ tab1 <-
 ```
 
 ```{r results = 'asis'}
-cat("Table 1. Average plot-level seedling and sapling stem densities, converted to stems per sq.m, and stocking index by cycle. Only native, canopy-forming species are included. Note that Fraxinus spp. (ash species) are no longer considered canopy-forming species. ", cycle_labs, "Plots are sampled in 4-year rotataions, with a quarter of the plots sampled each year (i.e. a panel). The stocking index quantifies whether current regeneration densities are sufficient to restock a forest canopy. The index is a weighted sum of seedling and sapling densities where larger seedling size classes get higher weights. Cells highlighted in green are plots that meet the minimum management target of 0.25 seedlings/m2 and 0.14 saplings/m2 or have a stocking index >100.", ifelse(length(cycle_labs) == 5, "Note that cycle 5 is only partially complete. ", ""), sep = "")
+cat("Table 1. Average plot-level seedling and sapling stem densities, converted to stems per sq.m, and stocking index by cycle. Only native, canopy-forming species are included. Note that Fraxinus spp. (ash species) are no longer considered canopy-forming species. ", paste0(cycle_labs, collapse = "; "), ". Plots are sampled in 4-year rotataions, with a quarter of the plots sampled each year (i.e. a panel). The stocking index quantifies whether current regeneration densities are sufficient to restock a forest canopy. The index is a weighted sum of seedling and sapling densities where larger seedling size classes get higher weights. Cells highlighted in green are plots that meet the minimum management target of 0.25 seedlings/m2 and 0.14 saplings/m2 or have a stocking index >100.", ifelse(length(cycle_labs) == 5, "Note that cycle 5 is only partially complete. ", ""), sep = "")
 ```
 
 ```{r echo = F}
