--- a/MIDN_figures_and_tables.Rmd
+++ b/MIDN_figures_and_tables.Rmd
@@ -9,7 +9,7 @@ output:
       #in_header: "header_MIDN.html"
       #after_body: "footer.html"
 params:
-  park: 'APCO' 
+  park: 'BOWA' 
 
 ---
 ```{r setup, include = FALSE, results = 'hide'}
@@ -33,6 +33,7 @@ library(vegan)
 
 ```{r}
 # assign params to global env. for source files to find. Makes iterating easier.
+#park <- "APCO"
 midn_names <- read.csv("MIDN_MetaData.csv")
 midn_params <- read.csv("MIDN_params.csv")
 park <<- params$park
@@ -124,7 +125,7 @@ includeHTML("html_header.html")
 ```{r out.width = "50%"}
 include_graphics(paste0(new_path, "figures/Figure_2_Regen_Debt_table.svg"))
 ```
-
+<br>
 
 ```{r results = 'asis'}
 cat("<p><b>Figure 2.</b> Regeneration Debt metrics and status for the most recent 4-year census (",
@@ -133,11 +134,11 @@ Tree Diameter Distribution. If TRUE, the density of small trees is lower than ex
 chronic regeneration failure. See <a href ='https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/eap.2837'>Miller et al. 2023</a> for more details on metric calculations, thresholds, and assessment of status.</p>", sep = "")
 ```
 
-
+<div style = "margin-left: -20px;">
 ```{r out.width = "80%"}
 include_graphics(paste0(new_path, "figures/", "Figure_3_", park, "_DBI_by_cycle.svg"))
 ```
-
+</div>
 
 ```{r results = 'asis'}
 cat(paste0("<p><b>Figure 3.</b> Deer browse impacts by cycle in ", park_long, " (", park, "). ",
@@ -212,11 +213,21 @@ cat("<p><b>Figure 6.</b> Loess smoothed changes in invasive plant percent cover 
 ```
 
 ### {.page-break-before}
-```{r results = 'asis'}
+```{r results = 'asis', eval = T}
 includeHTML("html_header.html")
 ```
 
-```{r include = F, eval = T}
+```{r results = 'hide', include = F}
+cap_t1 <- paste0("<p style='font-size:10px;'><b>Table 1.</b> Average plot-level seedling and sapling stem densities (stems per sq.m) and stocking index (per 2m radius microplot) by cycle. Only native, canopy-forming species are included. Note that Fraxinus spp. (ash species) are no longer considered canopy-forming species. ", paste0(cycle_labs, collapse = "; "), ". Plots are sampled in 4-year rotataions, with a quarter of the plots sampled each year (i.e. a panel). The stocking index quantifies whether current regeneration densities are sufficient to restock a forest canopy. The index is a weighted sum of seedling and sapling densities where larger seedling size classes get higher weights. Cells highlighted in green are plots that meet the minimum management target of 0.25 seedlings/m2 and 0.14 saplings/m2 or have a stocking index >100. ", ifelse(length(cycle_labs) == 5, "Note that cycle 5 is only partially complete.", ""), "</p>")
+
+cap_t2 <- paste0("<p style='font-size:10px;'><b>Table 2.</b> Average % cover and number of invasive species detected in each plot by cycle. ", paste0(cycle_labs, collapse = "; "), " Plots are sampled in 4-year rotations, with a quarter of the plots sampled each year (i.e. a panel). ", ifelse(length(cycle_labs) == 5, "Note that cycle 5 is only partially complete.", ""), "</p>")
+
+cap_t3 <- paste0("<p style='font-size:10px;'><b>Table 3.</b> Number of plots out of ", num_plots, " where priority invasive species were detected. ", paste0(cycle_labs, collapse = "; "), " Species on the list include all exotic vascular plant species that are capable of dominating Northeastern US forest habitats, and does not include all exotic species detected in MIDN forest plots. ", ifelse(length(cycle_labs) == 5, "Note that cycle 5 is only partially complete.", ""), "</p>")
+```
+
+
+```{r include = F, eval = T, results = 'hide'}
+# Table 1 setup
 reg_cycle_tab <- reg_cycle_wide |> arrange(Plot) |> select(-Plot_Name)
 tab1_cols <- names(reg_cycle_tab)
 tab1_row2 <- gsub("seed_den_|sap_den_|stock_", "Cycle ", tab1_cols)
@@ -227,40 +238,83 @@ reg_pass <- "#BFDFC7"
 # Have to use %>% pipe to use the '.' in the reduce.
 tab1 <- 
   kable(reg_cycle_tab, col.names = tab1_row2, digits = 2, align = 'c', format = 'html', 
-        table.attr = "style='width:85%;'") %>%
+        table.attr = "style='width:95%;height:95%;'") %>% #, caption = cap_t1) %>%
   add_header_above(c(" " = 1, " " = 1, "Seedlings per sq.m" = cycle_latest, 
                      "Saplings per sq.m" = cycle_latest, 
                      "Stocking Index" = cycle_latest)) %>%
   kable_styling(fixed_thead = FALSE, bootstrap_options = 'condensed',
-                full_width = FALSE, position = 'left', font_size = 10) %>%
+                full_width = FALSE, position = 'left', font_size = 9) %>%
   column_spec(c(1, 2), border_left = T, border_right = T) %>%
   column_spec(border_cols, border_right = T) %>%
   purrr::reduce(3:border_cols[1], function(x, y){
-    col <- reg_cycle_tab[, y]
-    column_spec(x, y, background = ifelse(col >= 0.25, reg_pass, "#FFFFFF"))}, .init = .) %>%
+    colm <- reg_cycle_tab[, y]
+    column_spec(x, y, background = ifelse(!is.na(colm) & colm >= 0.25, reg_pass, "#FFFFFF"))}, .init = .) %>%
   purrr::reduce((border_cols[1] + 1): border_cols[2], function(x, y){
-    col <- reg_cycle_tab[, y]
-    column_spec(x, y, background = ifelse(col >= 0.14, reg_pass, "#FFFFFF"))}, .init = .) %>%
+    colm <- reg_cycle_tab[, y]
+    column_spec(x, y, background = ifelse(!is.na(colm) & colm >= 0.14, reg_pass, "#FFFFFF"))}, .init = .) %>%
   purrr::reduce((border_cols[2] + 1): border_cols[3], function(x, y){
-    col <- reg_cycle_tab[, y]
-    column_spec(x, y, background = ifelse(col >= 100, reg_pass, "#FFFFFF"))}, .init = .) %>%
+    colm <- reg_cycle_tab[, y]
+    column_spec(x, y, background = ifelse(!is.na(colm) & colm >= 100, reg_pass, "#FFFFFF"))}, .init = .) %>%
   row_spec(1, extra_css = "border-top: 1px solid #000000;") %>%
   row_spec(nrow(reg_cycle_tab), extra_css = "border-bottom: 1px solid #000000;") %>%
+  #landscape(margin = "1cm") %>% 
   save_kable(file = "table1.html", self_contained = F) # save as html b/c pagedown was having issues
 ```
+```{r include = F, eval = T, results = 'hide'}
+# Table 2 setup
+inv_cycle_tab <- inv_plots_wide |> arrange(PlotCode) 
+tab2_cols <- names(inv_cycle_tab)
+tab2_row2 <- gsub("inv_cov_|numspp_", "Cycle ", tab2_cols)
+border2_cols <- c(2 + cycle_latest, 2 + cycle_latest*2, 2 )
 
-```{r results = 'asis'}
-cat("Table 1. Average plot-level seedling and sapling stem densities (stems per sq.m) and stocking index (per 2m radius microplot) by cycle. Only native, canopy-forming species are included. Note that Fraxinus spp. (ash species) are no longer considered canopy-forming species. ", paste0(cycle_labs, collapse = "; "), ". Plots are sampled in 4-year rotataions, with a quarter of the plots sampled each year (i.e. a panel). The stocking index quantifies whether current regeneration densities are sufficient to restock a forest canopy. The index is a weighted sum of seedling and sapling densities where larger seedling size classes get higher weights. Cells highlighted in green are plots that meet the minimum management target of 0.25 seedlings/m2 and 0.14 saplings/m2 or have a stocking index >100.", ifelse(length(cycle_labs) == 5, "Note that cycle 5 is only partially complete. ", ""), sep = "")
+tab2 <- 
+  kable(inv_plots_wide, col.names = tab2_row2, digits = 2, align = 'c', format = 'html', 
+        table.attr = "style='width:95%;height:95%;'") %>% #, caption = cap_t2, title = NULL) %>%
+  add_header_above(c(" " = 1, " " = 1, "Average % Cover" = cycle_latest, 
+                     "Number of Species per Plot" = cycle_latest)) %>%
+  kable_styling(fixed_thead = FALSE, bootstrap_options = 'condensed',
+                full_width = FALSE, position = 'left', font_size = 9) %>%
+  column_spec(c(1, 2), border_left = T, border_right = T) %>%
+  column_spec(border2_cols, border_right = T) %>%
+  row_spec(1, extra_css = "border-top: 1px solid #000000;") %>%
+  row_spec(nrow(inv_cycle_tab), extra_css = "border-bottom: 1px solid #000000;") %>%
+  #landscape(margin = "1cm") %>%
+  save_kable(file = "table2.html", self_contained = F)
+```
+```{r include = F, eval = T, results = 'hide'}
+# Table 3 setup
+tab3_cols <- c("Latin Name", "Common Name", gsub("cycle_", "Cycle ", names(inv_spp[,3:ncol(inv_spp)])))
+
+tab3 <- 
+  kable(inv_spp, col.names = tab3_cols, digits = 0, align = 'c', format = 'html',
+        table.attr = "style='width:95%;height:95%;'") %>% #, caption = cap_t3, title = NULL) %>%
+  kable_styling(fixed_thead = FALSE, bootstrap_options = 'condensed',
+                full_width = FALSE, position = 'left', font_size = 9) %>%
+  column_spec(1, italic = TRUE) %>%
+  column_spec(c(1, 2), border_left = T, border_right = T) %>%
+  column_spec(ncol(inv_spp), border_right = T) %>%
+  row_spec(1, extra_css = "border-top: 1px solid #000000;") %>%
+  row_spec(nrow(inv_spp), extra_css = "border-bottom: 1px solid #000000;") %>%
+  #landscape(margin = "1cm") %>%
+  save_kable(file = "table3.html", self_contained = F)
+
+
 ```
 
 <br>
+
+```{r results = 'asis'}
+cat(cap_t1)
+```
+
 ```{r echo = F, eval = T}
 includeHTML("table1.html")
 ```
 <br>
 
 
-```{r results = 'asis'}
+```{r results = 'asis', include = F}
+# have to run this to reset competing css from table1.html
 HTML(
 "<style>
 h4, .h4, h5, .h5, h6, .h6 {
@@ -272,6 +326,42 @@ margin-bottom: 0;
 ```
 
 ### {.page-break-before}
+
 ```{r results = 'asis'}
 includeHTML("html_header.html")
 ```
+
+<br>
+
+
+```{r results = 'asis'}
+cat(cap_t2)
+```
+
+
+
+```{r echo = F, eval = T}
+includeHTML("table2.html")
+```
+
+<br>
+
+
+###   {.page-break-before}
+
+```{r results = 'asis'}
+includeHTML("html_header.html")
+```
+
+<br>
+
+```{r results = 'asis'}
+cat(cap_t3)
+```
+
+```{r echo = F, eval = T}
+includeHTML("table3.html")
+
+```
+
+<br>
